1. Refactored 2. TextView, EditText Swap

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,9 +2,9 @@
 <resources>
 
     <string name="app_name">Protasker</string>
-    <string name="EnterPays_atomPay_nameHint">Add ToDo here</string>
-    <string name="EnterPays_TextView_ZeroValue">0</string>
-    <string name="EnterPays_addPayment">Add Payment</string>
-    <string name="cab_delete">delete</string>
+    <string name="EnterTask_nameHint">New Task</string>
+    <string name="EnterTask_TextView_ZeroValue">0</string>
+    <string name="EnterTask_addTask">Add Payment</string>
+    <string name="cab_delete">Del</string>
 
 </resources>
